[fix][client] Fix additional Java 17 modernizer violations in pulsar-common
- Replace URLEncoder/URLDecoder with Charset-based APIs
- Replace ImmutableList/ImmutableMap with Java 9+ collection factories
- Update OffloadPoliciesImpl to use List instead of ImmutableList
- Simplify Codec class by removing exception handling

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>